syntax = "proto3";

package resources.settings;

import "buf/validate/validate.proto";
import "google/protobuf/duration.proto";
import "resources/settings/banner.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/settings;settings";

// @dbscanner: json,partial
message AppConfig {
  optional string version = 1;

  string default_locale = 8 [(buf.validate.field).string.max_len = 20];

  Auth auth = 2;
  Perms perms = 3;
  Website website = 4;
  JobInfo job_info = 5;
  UserTracker user_tracker = 6;
  Discord discord = 7;
  System system = 9;

  Display display = 10;
}

message Auth {
  bool signup_enabled = 1;
  bool last_char_lock = 2;
}

message Perms {
  repeated Perm default = 1 [(buf.validate.field).repeated.max_items = 100];
}

message Perm {
  // @sanitize: method=StripTags
  string category = 1 [(buf.validate.field).string.max_len = 128];
  // @sanitize: method=StripTags
  string name = 2 [(buf.validate.field).string.max_len = 255];
}

message Website {
  Links links = 1;
  bool stats_page = 2;
}

message Links {
  // @sanitize: method=StripTags
  optional string privacy_policy = 1 [(buf.validate.field).string.max_len = 255];
  // @sanitize: method=StripTags
  optional string imprint = 2 [(buf.validate.field).string.max_len = 255];
}

message JobInfo {
  UnemployedJob unemployed_job = 1 [(buf.validate.field).required = true];
  // @sanitize: method=StripTags
  repeated string public_jobs = 2 [(buf.validate.field).repeated.max_items = 100];
  // @sanitize: method=StripTags
  repeated string hidden_jobs = 3 [(buf.validate.field).repeated.max_items = 100];
}

message UnemployedJob {
  string name = 1 [(buf.validate.field).string.max_len = 20];
  int32 grade = 2 [(buf.validate.field).int32.gte = 0];
}

message UserTracker {
  google.protobuf.Duration refresh_time = 1 [
    (buf.validate.field).duration = {
      lt: {seconds: 60}
      gte: {nanos: 500000000}
    },
    (buf.validate.field).required = true
  ];
  google.protobuf.Duration db_refresh_time = 2 [
    (buf.validate.field).duration = {
      lt: {seconds: 60}
      gte: {nanos: 500000000}
    },
    (buf.validate.field).required = true
  ];
}

message Discord {
  bool enabled = 1;
  google.protobuf.Duration sync_interval = 2 [
    (buf.validate.field).duration = {
      lt: {seconds: 180000000}
      gte: {seconds: 60}
    },
    (buf.validate.field).required = true
  ];
  // @sanitize: method=StripTags
  optional string invite_url = 3 [(buf.validate.field).string.max_len = 255];
  // @sanitize: method=StripTags
  repeated string ignored_jobs = 4 [(buf.validate.field).repeated.max_items = 100];
  optional DiscordBotPresence bot_presence = 5;
  // @sanitize: method=StripTags
  optional string bot_id = 6 [(buf.validate.field).string.max_len = 255];
  int64 bot_permissions = 7;
}

enum DiscordBotPresenceType {
  DISCORD_BOT_PRESENCE_TYPE_UNSPECIFIED = 0;
  DISCORD_BOT_PRESENCE_TYPE_GAME = 1;
  DISCORD_BOT_PRESENCE_TYPE_LISTENING = 2;
  DISCORD_BOT_PRESENCE_TYPE_STREAMING = 3;
  DISCORD_BOT_PRESENCE_TYPE_WATCH = 4;
}

message DiscordBotPresence {
  DiscordBotPresenceType type = 1;
  // @sanitize: method=StripTags
  optional string status = 2;
  // @sanitize: method=StripTags
  optional string url = 3;
}

message System {
  bool banner_message_enabled = 1;
  resources.settings.BannerMessage banner_message = 2;
}

message Display {
  // IETF BCP 47 language tag (e.g. "en-US", "de-DE")
  optional string intl_locale = 1 [(buf.validate.field).string.max_len = 32];
  // ISO 4217 currency code (e.g. "USD", "EUR")
  string currency_name = 2 [(buf.validate.field).string.len = 3];
}
